# raytracer

./: .gitignore  Cargo.toml  README.md  documentation.md  example.sh  gen_cool_stuff.py  run.sh
img/: img.py
src/: main.rs  raytracer.rs  setup.rs  utils.rs
src/utils/: light.rs  material.rs  sphere.rs  vec3.rs
