[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = "4.1.4"
gif = "0.12.0"
image = "0.24.5"
itertools-num = "0.1.3"
ndarray = "0.15.6"
tqdm = "0.4.4"


[[bin]]
name = "main"
path = "src/main.rs"
